# Python-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  run_client.py  사용자가_해야할_일.md  파이썬 프로젝트.md  프로젝트_구조_및_계획.md
client/: config.py  constants.py  main.py  paths.py  player_labels.py  server_config.py
client/audio/: manager.py  music.py  sfx.py
client/effects/: manager.py  particles.py  screen_shake.py  transitions.py
client/game/: app.py  clock.py  input.py  repeat.py  save_data.py  settings.py
client/match/: countdown.py
client/net/: api.py  background.py  protocol.py  sync.py  websocket.py
client/scenes/: base.py  intro.py  menu.py  online_game.py  online_lobby.py  online_room.py  options.py  single.py
client/tetris/: board.py  garbage.py  piece.py  randomizer.py  replay.py  rules.py  scoring.py  snapshot.py  srs.py
client/ui/: button.py  fonts.py  input_box.py  layout.py  list_view.py  surface.py  tetris_panel.py  text.py
packaging/: pyinstaller_client.spec
scripts/: build_client_exe.ps1  run_client.ps1  run_client_local.ps1  run_server.ps1  server_smoke_test.py  smoke_test.py
server/: config.py  main.py
server/app/: api.py  match.py  models.py  rooms.py  state.py  websocket.py
server/tests/: test_api.py  test_match.py  test_rooms.py
shared/: errors.py  protocol.py  schemas.py
tests/client/: test_background_request.py  test_countdown.py  test_input_config.py  test_player_labels.py  test_repeat.py  test_server_config.py  test_snapshot.py  test_tetris_rules.py  (+1 more)
(+1 files in other folders)
