[project]
name = "python-online-tetris"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pygame-ce>=2.5.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "websockets>=13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "server/tests"]
pythonpath = ["."]
